--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.17.0",
+    "gsap": "^3.12.7",
     "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "15.1.4",
