--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "npm": "^10.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.1"
+    "sass": "^1.83.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
