--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "gsap": "^3.12.7",
     "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.21",
-    "next": "15.1.4",
+    "next": "^15.2.4",
     "npm": "^10.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "sass": "^1.83.1",
     "sharp": "^0.33.5"
   },
