--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "^15.2.4",
+    "next-view-transitions": "^0.3.4",
     "npm": "^10.9.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "sass": "^1.83.1",
     "sharp": "^0.33.5"
