--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "framer-motion": "^11.17.0",
     "gsap": "^3.12.7",
     "install": "^0.13.0",
@@ -21,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "sass": "^1.83.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
